--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.2",
+    "oidc-client-ts": "^3.4.1",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.26",
     "vue-oidc-client": "1.0.0-alpha.5",
