--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "oidc-client-ts": "^3.4.1",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.26",
-    "vue-oidc-client": "1.0.0-alpha.5",
-    "vue-router": "^4.6.4",
-    "vue3-oidc": "^1.0.2"
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.3",
